move user controller to swagger
